<resources>
    <string name="app_name">WisdomLeap</string>
    <string name="verify_me">Verify me</string>
    <string name="send_otp">Send OTP</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="content_delete_icon">delete icon</string>
    <string name="enter_code">Enter Code</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="submit">submit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="next">Next</string>
    <string name="unknown_error">Something Went Wrong Please try again</string>
    <string name="school_city">School City</string>
    <string name="city">City</string>
    <string name="school_name">School name</string>
    <string name="latitude_label">Latitude: %f</string>
    <string name="longitude_label">Longitude: %f</string>
    <string name="NO_LOCATION_DETECTED">No Location Detected</string>
    <string name="permission_denied_explanation">
        Permission was denied, but is needed for core functionality.
    </string>
    <string name="permission_rationale">
        Location permission is needed for core functionality
    </string>
    <string name="settings">Settings</string>
    <string name="place_api_key">AIzaSyCLJ8eLdOh0HezxlyyKDRLCkQSCrmQSsE4</string>
    <string name="search_area_or_place_or_street_name">Search Area or Place or Street Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="level_string_num1">Level 1</string>
    <string name="ComputerScore">Computer : %1$d</string>
    <string name="YourScore">You : %1$d</string>
    <string name="YOUR_SCORE">Your Score</string>

    <string name="unable_to_fetch_data">Unable to fetch data please try again</string>
    <string name="sample_question">Which of the following planets does not have a natural satellite?</string>
    <string name="num10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="Grade">Grade</string>
    <string name="GradeValue">Grade %1$s</string>
    <string name="QuestionNumber">Question: %1$d of %2$d</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="quiz_point_percentage">%1$d of %2$d points,(%3$d%)</string>
    <string name="average">Average</string>
    <string name="quit">Quit</string>

    //Intro Sliders
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Quality Videos</string>
    <string name="slide_1_desc">“The best quality learning videos covering the complete curriculum.”</string>

    <string name="slide_2_title">Learn</string>
    <string name="slide_2_desc">“Learn concepts visually. Anytime, anywhere”</string>

    <string name="slide_3_title">What do you want?</string>
    <string name="slide_3_desc">“Science, Math, History, Geography, Economics or Political Science – we have it all here”</string>

    <string name="quote_of_the_day">Quote of the day</string>
    <string name="sample_quote">As America celebrates Memorial Day, we pay tribute to those who have given their lives in our nation\'s wars.</string>
    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>

    <string name="month_prompt">Select Month</string>
    <string name="register_with_us">Register with us</string>
    <string name="to_find_out_more">to find out more</string>
    <string name="chapter_count">%1$d Chapters</string>
    <string name="lesson_count">%1$d Lessons</string>
    <string-array name="month_arrays">
        <item>All</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>

    </string-array>


</resources>
