<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkColor"
    tools:context=".view.fragment.QuizQuestionFragment">

    <include layout="@layout/layout_progressbar" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionNumber">

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"

            android:text="@string/sample_question"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_medium"
            app:layout_constraintBottom_toTopOf="@+id/rgOptions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

        <RadioGroup
            android:id="@+id/rgOptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvQuestion">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Saturn"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_medium" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Venus"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_medium" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Mars"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_medium" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Jupiter"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_medium" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/tvQuestion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tvNum1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/num1"
                    android:textSize="@dimen/font_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvNum2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvNum2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/num2"
                    android:textSize="@dimen/font_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvNum3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvNum1"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvNum3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/num3"
                    android:textSize="@dimen/font_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvNum4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvNum2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvNum4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/num4"
                    android:textSize="@dimen/font_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvNum5"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvNum3"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvNum5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/num5"
                    android:textSize="@dimen/font_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvNum6"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvNum4"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvNum6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/num6"
                    android:textSize="@dimen/font_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvNum7"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvNum5"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvNum7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/num7"
                    android:textSize="@dimen/font_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvNum8"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvNum6"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvNum8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/num8"
                    android:textSize="@dimen/font_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvNum9"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvNum7"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvNum9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/num9"
                    android:textSize="@dimen/font_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvNum10"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvNum8"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvNum10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/num10"
                    android:textSize="@dimen/font_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tvNum9"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tvNum11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_corner"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:text="@string/_11"
                        android:textSize="@dimen/font_size_small"
                        tools:layout_editor_absoluteX="34dp"
                        tools:layout_editor_absoluteY="2dp" />

                    <TextView
                        android:id="@+id/tvNum12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_corner"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:text="@string/_12"
                        android:textSize="@dimen/font_size_small"
                        tools:layout_editor_absoluteX="102dp"
                        tools:layout_editor_absoluteY="2dp" />

                    <TextView
                        android:id="@+id/tvNum13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_corner"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:text="@string/_13"
                        android:textSize="@dimen/font_size_small"
                        tools:layout_editor_absoluteX="172dp"
                        tools:layout_editor_absoluteY="2dp" />

                    <TextView
                        android:id="@+id/tvNum14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_corner"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:text="@string/_14"
                        android:textSize="@dimen/font_size_small"
                        tools:layout_editor_absoluteX="241dp"
                        tools:layout_editor_absoluteY="2dp" />

                    <TextView
                        android:id="@+id/tvNum15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_corner"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:text="@string/_15"
                        android:textSize="@dimen/font_size_small"
                        tools:layout_editor_absoluteX="310dp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <Button
            android:id="@+id/btnSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="Skip"
            android:textColor="@color/white"
            android:background="@color/primaryLightColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnNext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="Next"
            android:textColor="@color/white"
            android:background="@color/primaryLightColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvQuestionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Question: 1 of 15"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Chronometer
        android:id="@+id/chronometerTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_small"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>